--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
 language: go
+sudo: required
+dist: trusty
+before_install:
+  - sudo apt-get install -qq fuse
+  - sudo modprobe fuse
+  - sudo /bin/sh -c 'echo user_allow_other > /etc/fuse.conf'
+  - sudo chmod 666 /dev/fuse
+  - sudo chown root:$USER /etc/fuse.conf
