--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
   - sudo /bin/sh -c 'echo user_allow_other > /etc/fuse.conf'
   - sudo chmod 666 /dev/fuse
   - sudo chown root:$USER /etc/fuse.conf
-  - sudo apt-get install -qq build-essential uuid-dev xfslibs-dev libattr1-dev
+  - sudo apt-get install -qq build-essential uuid-dev xfslibs-dev libattr1-dev libacl1-dev
   - git clone https://github.com/rfjakob/fuse-xfstests /tmp/fuse-xfstests
   - cd /tmp/fuse-xfstests && make
