default test action

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ before_install:
   - sudo apt-get install -qq build-essential uuid-dev xfslibs-dev libattr1-dev libacl1-dev libdm0-dev
   - git clone https://github.com/rfjakob/fuse-xfstests /tmp/fuse-xfstests
   - cd /tmp/fuse-xfstests && make
+script:
+  - go test ./...
