default test action from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_install:
   - git clone https://github.com/rfjakob/fuse-xfstests /tmp/fuse-xfstests
   - cd /tmp/fuse-xfstests && make
 script:
-  - go test ./...
+  - go test -v ./...
