default test action from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ before_install:
   - git clone https://github.com/rfjakob/fuse-xfstests /tmp/fuse-xfstests
   - cd /tmp/fuse-xfstests && make
 script:
+  - go get -t -v ./...
   - go test -v ./...
