--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ before_install:
   - sudo /bin/sh -c 'echo user_allow_other > /etc/fuse.conf'
   - sudo chmod 666 /dev/fuse
   - sudo chown root:$USER /etc/fuse.conf
+  - go get github.com/mattn/goveralls
     #- sudo apt-get install -qq build-essential uuid-dev xfslibs-dev attr-dev acl-dev dmapi-dev attr
     #- git clone https://github.com/rfjakob/fuse-xfstests /tmp/fuse-xfstests
     #- cd /tmp/fuse-xfstests && make && cd -
 script:
   - go get -t -v ./...
-  - go test -v ./...
+  - $HOME/gopath/bin/goveralls -service=travis-ci
