Leaving the tests in

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ before_install:
     #- cd /tmp/fuse-xfstests && make && cd -
 script:
   - go get -t -v ./...
+  - go test -v ./...
   - $HOME/gopath/bin/goveralls -service=travis-ci
